--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
+.Home {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(57, 57, 57),
+    rgb(4, 4, 4)
+  );
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
+}
+
+h1 {
+  margin: 0px !important;
+  color: white;
+  font-weight: bold !important;
+}
+
+h3 {
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.letter {
+  font-size: 40px;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.text-area {
+  text-align: center;
+  font-family: "Dela Gothic One", cursive;
+  font-size: 36px;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-30px);
+  }
+
+  60% {
+    transform: translateY(-15px);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.correct {
+  color: rgb(0, 196, 0);
+  text-shadow: 0 0 5px rgb(0, 255, 0);
 }
 
-.App-link {
-  color: #61dafb;
+.current {
+  animation: bounce 1s ease infinite;
+  color: orange;
+  text-shadow: 0 0 5px orange;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.others {
+  color: rgb(174, 174, 174) !important;
+}
+
+.input-area {
+  text-align: center;
+  margin: auto;
+  margin: 20px 0px;
+}
+
+.input-area > input {
+  height: 50px;
+  font-size: 25px;
+  border-radius: 5px;
+  padding: 10px;
+  width: 50px;
+  border: none !important;
+  background-color: transparent !important;
+  outline: none;
+  caret-color: transparent;
+}
+
+.input-area > input:focus {
+  outline: none;
 }
