--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   font-weight: bold;
   color: white;
   margin: 0px;
+  font-family: "Dela Gothic One", cursive;
 }
 
 h1 {
@@ -28,7 +29,7 @@ h1 {
 }
 
 h3 {
-  color: white;
+  color: white !important;
   text-align: center;
 }
 
@@ -96,18 +97,18 @@ h3 {
 .input-area {
   text-align: center;
   margin: auto;
-  margin: 20px 0px;
 }
 
 .input-area > input {
-  height: 0px;
-  font-size: 25px;
+  text-align: center;
+  font-size: 20px;
   border-radius: 5px;
-  width: 50px;
+  width: 100%;
   border: none !important;
   background-color: transparent !important;
   outline: none;
   caret-color: transparent;
+  color: white !important;
 }
 
 .input-area > input:focus {
@@ -117,5 +118,8 @@ h3 {
 @media (max-width: 1200px) {
   .letter {
     font-size: 20px;
+  }
+  .input-area > input {
+    font-size: 15px;
   }
 }
