--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
     rgb(57, 57, 57),
     rgb(4, 4, 4)
   );
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   padding: 0px;
   margin: 0px;
 }
@@ -39,7 +41,7 @@ h3 {
 
 .language-btn-div {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .language-btn {
@@ -100,6 +102,7 @@ h3 {
 .input-area {
   text-align: center;
   margin: auto;
+  margin-top: 10px;
 }
 
 .input-area > input {
