--- a/src/App.css
+++ b/src/App.css
@@ -110,9 +110,13 @@ h3 {
   text-align: center;
   margin: auto;
   margin-top: 10px;
+
+  width: 100%;
+  /* height: 100%; */
 }
 
 .input-area > input {
+  position: absolute;
   text-align: center;
   font-size: 20px;
   border-radius: 5px;
@@ -122,6 +126,10 @@ h3 {
   outline: none;
   caret-color: transparent;
   color: white !important;
+  height: 80%;
+  /* background-color: aquamarine; */
+  top: 0;
+  left: 0;
 }
 
 .input-area > input:focus {
