--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@ h3 {
   color: rgb(220, 148, 16);
   text-shadow: 0 0 5px rgb(193, 146, 59);
   transition: 0.3s;
+  border-left: 3px solid rgb(193, 146, 59);
+  padding: 5px;
 }
 
 .others {
