--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,9 +1,7 @@
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
+.Footer {
+  margin-top: auto;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
   text-align: center;
 }
