--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   padding: 0px;
   margin: 0px;
+  min-height: 100vh;
 }
 
 .nav-bar {
@@ -65,6 +66,7 @@ h3 {
   font-size: 36px;
   margin: 20px 0px 20px 0px;
   padding: 0px 40px;
+  position: relative;
 }
 
 @keyframes bounce {
@@ -106,32 +108,36 @@ h3 {
   color: rgb(174, 174, 174) !important;
 }
 
-.input-area {
-  text-align: center;
-  margin: auto;
-  margin-top: 10px;
-  width: 100%;
-}
-
 .input-area > input {
   position: absolute;
   text-align: center;
   font-size: 20px;
   border-radius: 5px;
   width: 100%;
-  border: none !important;
-  background-color: transparent !important;
+  border: none;
+  background-color: transparent;
   outline: none;
   caret-color: transparent;
-  color: white !important;
-  height: 80%;
-  /* background-color: aquamarine; */
+  height: 100%;
   top: 0;
   left: 0;
+  background-color: rgba(56, 56, 56, 0.9);
+  transition: 0.6s;
+}
+
+.input-area > input::placeholder {
+  color: #ffffff;
+  opacity: 1;
+  width: 100%;
 }
 
 .input-area > input:focus {
   outline: none;
+  background-color: transparent;
+}
+
+.input-area > input:focus::placeholder {
+  color: transparent;
 }
 
 .result-div {
