--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,8 @@
 .Footer {
-  margin-top: auto;
-  padding: 10px;
-  background-color: #000;
+  background-color: transparent !important;
   color: #fff;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
