--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,6 @@ h3 {
   position: absolute;
   text-align: center;
   font-size: 20px;
-  border-radius: 5px;
   width: 100%;
   border: none;
   background-color: transparent;
@@ -122,6 +121,7 @@ h3 {
   left: 0;
   background-color: rgba(56, 56, 56, 0.9);
   transition: 0.6s;
+  min-height: 200px;
 }
 
 .input-area > input::placeholder {
