--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ h3 {
   color: rgb(174, 174, 174) !important;
 }
 
-.input-area > input {
+.input-area {
   position: absolute;
   text-align: center;
   font-size: 20px;
@@ -119,9 +119,17 @@ h3 {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(56, 56, 56, 0.9);
   transition: 0.6s;
-  min-height: 200px;
+  min-height: 400px;
+}
+
+.input-area > input {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border: none;
+  transition: 0.6s;
+  background-color: rgba(56, 56, 56, 0.9);
 }
 
 .input-area > input::placeholder {
