--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,11 @@ h3 {
   text-align: left;
 }
 
+.language-btn-div {
+  width: 200px;
+  margin: auto;
+}
+
 @media (max-width: 1200px) {
   .letter {
     font-size: 20px;
