--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ h3 {
   position: relative;
 }
 
+.chinese {
+  font-family: "Noto Sans TC", sans-serif !important;
+}
+
 @keyframes bounce {
   0%,
   20%,
@@ -129,7 +133,8 @@ h3 {
   text-align: center;
   border: none;
   transition: 0.6s;
-  background-color: rgba(56, 56, 56, 0.9);
+  background-color: rgba(50, 49, 49, 0.9);
+  backdrop-filter: blur(5px);
 }
 
 .input-area > input::placeholder {
@@ -141,6 +146,7 @@ h3 {
 .input-area > input:focus {
   outline: none;
   background-color: transparent;
+  backdrop-filter: blur(0px);
 }
 
 .input-area > input:focus::placeholder {
